fixed: add state to invoice
