# ecommerce/src/sales/routes/salesOrders.js
@@ -1,13 +1,13 @@
 const router = require('express').Router();
 const salesOrderController = require('../controllers/salesOrderController');
 const {salesOrderIdValidation, salesOrderStateValidation, customerValidation,
-  orderLineItemsValidation, totalPriceValidation} = require('../middlewares/salesOrderValidation');
+  orderLineItemsValidation} = require('../middlewares/salesOrderValidation');
 const {checkValidationPassed} = require('../../middlewares/chackValidationPassed');
 
-router.post('/', [customerValidation, orderLineItemsValidation, totalPriceValidation],checkValidationPassed, salesOrderController.createSalesOrder);
+router.post('/', [customerValidation, orderLineItemsValidation],checkValidationPassed, salesOrderController.createSalesOrder);
 router.get('/', salesOrderController.getAllSalesOrders);
 router.get('/:salesOrderId', salesOrderIdValidation, checkValidationPassed, salesOrderController.getSalesOrderById);
-router.put('/:salesOrderId', [salesOrderIdValidation, customerValidation, orderLineItemsValidation, totalPriceValidation],
+router.put('/:salesOrderId', [salesOrderIdValidation, customerValidation, orderLineItemsValidation],
   checkValidationPassed, salesOrderController.updateSalesOrder);
 router.patch('/:salesOrderId', [salesOrderIdValidation, salesOrderStateValidation], checkValidationPassed, salesOrderController.partiallyUpdateSalesOrder);
 router.delete('/:salesOrderId', salesOrderIdValidation, checkValidationPassed, salesOrderController.deleteSalesOrder);
